improved changing from List to Deque